--- a/package.json
+++ b/package.json
@@ -3,7 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "files": [
+    "lib/**/*"
+  ],
   "scripts": {
+    "build": "tsc",
+    "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
+    "lint": "tslint -p tsconfig.json",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -12,8 +18,10 @@
   },
   "keywords": [
     "es6",
-    "yypescript",
+    "typescript",
     "jest",
+    "tslint",
+    "prettier",
     "conventional-changelog"
   ],
   "author": "Antonio Garcia, agl0809@gmail.com",
@@ -24,6 +32,9 @@
   "homepage": "https://github.com/agl0809/generate-pin#readme",
   "devDependencies": {
     "cz-conventional-changelog": "^3.1.0",
+    "prettier": "^1.19.1",
+    "tslint": "^6.0.0",
+    "tslint-config-prettier": "^1.18.0",
     "typescript": "^3.7.5"
   },
   "config": {
