--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "generate-pin",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "files": [
     "lib/**/*"
   ],
